Archive2/99/0a12fc81ea21de/output
main.cpp:3:24: error: use of deleted function 'std::__atomic_base<_IntTp>::__atomic_base(const std::__atomic_base<_IntTp>&) [with _ITp = int]'
 std::atomic_int stop = 0;
                        ^
In file included from /usr/local/include/c++/4.9.0/atomic:41:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/atomic_base.h:363:7: note: declared here
       __atomic_base(const __atomic_base&) = delete;
       ^
